--- a/weightroom001.css
+++ b/weightroom001.css
@@ -14,3 +14,12 @@ height: 40px;
 position: center;
 }
 .id{width:200px;height: 200px;}
+
+textarea{width: 300px;
+height: 50px;
+font-size: 180%;
+position: center
+}
+
+p{font-size: 200%}
+
